# ki-fuer-marie

./: .gitignore  nobrainer_of_the_day.md  pyproject.toml  readme.md  roadmap.md
episodes/02-fortgeschrittene-konzepte-neuronaler-netze/code/: neural_networks.ipynb
episodes/04-wissensmanagement/code/: 04_02_RAG.ipynb
episodes/06-philosophische-fragen-und-ausblick/: neurologische_Erkrankungen_KNN.txt
episodes/099-outtakes/code/: outtakes.ipynb
